sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/PubMethod.sand
pub class PubMethod {
    foo() {
        new Foo {
            pub foo() {
                
            }
        }
    }
}